--- a/docker/kafka/config.properties
+++ b/docker/kafka/config.properties
@@ -15,3 +15,4 @@ transaction.state.log.min.isr=1
 transaction.state.log.replication.factor=1
 zookeeper.connect=zookeeper:2181
 zookeeper.connection.timeout.ms=6000
+auto.create.topics.enable=true
